# next-gen

./: .gitignore  CMakeLists.txt
examples/tests/loader/: lowermem.c  lowermem.ll
src/cfg/: IInstruction.hh  IInstructionWithOperation.hh  IOperation.hh  IOperationFactory.hh  InstructionNode.cc  InstructionNode.hh
src/core/: IAbstractProgramConfiguration.hh  ISymState.hh  LlvmLoader.cc  LlvmLoader.hh  LlvmSourceParser.cc  LlvmSourceParser.hh
src/domains/smg/: Spc.cc  Spc.hh  SpcOperationsFactory.cc  SpcOperationsFactory.hh  SpcSymbolicState.cc  SpcSymbolicState.hh
src/domains/smg/operations/: BaseSpcOperation.cc  BaseSpcOperation.hh  SpcOperationAdd.cc  SpcOperationAdd.hh  SpcOperationAlloca.cc  SpcOperationAlloca.hh  SpcOperationLoad.cc  SpcOperationLoad.hh  SpcOperationRet.cc  SpcOperationRet.hh  SpcOperationStore.cc  SpcOperationStore.hh
src/passes/: CMakeLists.txt  all_inline.cc  all_inline.hh  elim_const_expr.cc  elim_const_expr.hh  elim_phi.cc  elim_phi.hh  global_vars.cc  global_vars.hh  lower_mem.cc  lower_mem.hh  lower_select.cc  lower_select.hh  passes.hh  test.cc
src/types/: Type.hh
tests/: CMakeLists.txt
tests/core/: LlvmLoaderTest.cc  LlvmSourceParserTest.cc
